--- a/cloud/app.yaml
+++ b/cloud/app.yaml
@@ -45,6 +45,9 @@ handlers:
 - url: /att_case_hacks/.*|^/att_case_hacks$
   script: ATTCaseHacks.app
 
+- url: /static
+  static_dir: static
+
 - url: /_ah/admin/.*
   script: google.appengine.ext.admin.application
   login: admin
